2010-05-13
    * Man pages for the utilities/test programs.

2010-05-10
    * New test program: DrumGrid

2010-04-19
    * Release 0.3.1
    * Allow to build drumstick-file library under Windows
    * New method MidiClient::parseAddress() replacing the ALSA function 
      snd_seq_parse_address() in MidiPort::subscribeTo() and similar methods.
    * Fixed MidiClient::getAvailableInputs() and getAvailableOutputs() forcing 
      to always retrieve the clients list.

2010-03-09
    * Release 0.3.0
    * API changes:
      SequencerEvent::isChannel() returns true for SND_SEQ_EVENT_NOTE 
      QueueTimer::setId(const TimerId& id) new method overload
      Timer::bestGlobalTimerId() new static function
      getRuntimeALSALibraryVersion() new global function
      getRuntimeALSALibraryNumber() new global function
      getRuntimeALSADriverVersion() new global function
      getRuntimeALSADriverNumber() new global function
    
2010-03-02
    * New class QWrk, for reading Cakewalk files

2010-02-17
    * Split: drumstick-file and drumstick-alsa 

2010-01-07
    * Renamed to 'drumstick' and moved to a new project repository 

2009-12-27
    * Release 0.2.0
    * API changes:
      SequencerInputThread::start() added a priority parameter
      SequencerEvent::isChannel() new static method
      SequencerOutputThread::stopped() method removed, converted into a signal
      SequencerOutputThread::start() added a priority parameter
      SequencerOutputThread::shutupSound() method removed
      SequencerOutputThread::stopRequested() method added
      QSmfPrivate class added
      QSmf::writeMetaEvent() new method overload
      QSmf::getTextCodec() new method
      QSmf::setTextCodec() new method
      QSmf::signalSMFVariable() signal dropped
      QSmf::signalSMFMetaUnregistered() signal added
      Subscriber::operator==() removed unimplemented operator prototype

2009-08-27
    * Public release 0.1.0

2008-12-29 0.0.2pre5